tests/invalid/generated_binop_add_bool_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: bytes = b"hello"
    z = x + y
